Fix breaking choice styles on mobile

--- a/components/MultipleChoice/index.scss
+++ b/components/MultipleChoice/index.scss
@@ -3,9 +3,11 @@
 @import '~kununu-theme/scss/base/variables';
 
 .label {
-  margin-right: 10px;
-  margin-bottom: 0;
-  width: 140px;
+  @media (min-width: $screen-xs-min) {
+    margin-right: 10px;
+    margin-bottom: 0;
+    width: 140px;
+  }
 }
 
 .choice {
